--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cloudproject",
   "version": "1.0.0",
-  "description": "",
+  "description": "Cloud computing SIMPRE - 2022",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mysql": "^2.18.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
